--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-145066191-2');</script>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<title>McbeEringi 404</title>
 		<style media="screen">
 			:root{background-color:#222;color:#fff;
 				font-family:monospace;text-align:center;
@@ -19,7 +18,7 @@
 		</style>
 	</head>
 	<body>
-		McbeEringi <br>
+		SkyFree <br>
 		<div id="pre" style="font-size:150%;">
 			Redirecting to correct URL <br>
 			Please wait…
